--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-dlib>=19.24.0
+numpy>=1.19.5
+pandas>=1.2.4
+opencv-python>=4.7.0
+mediapipe>=0.9.0
 keyboard>=0.13.5
-numpy>=1.24.0
-opencv-python>=4.8.0
-pandas>=2.0.0
-pyaudio>=0.2.13
-PyQt5>=5.15.0
 tqdm>=4.65.0
